test/tests/compiler/6_statements_and_conditional_expressions/valid/binary_false_condition.plx
pub fn main(none) i32 {
    if 1 + 2 == 4 {
        return 5
    }
}
