test/tests/compiler/6_statements_and_conditional_expressions/invalid_lex/extra_credit/bad_label.plx
pub fn main(none) i32 {
    label 0invalid_label
    return 0
}
